--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "furniture-app",
   "private": true,
   "version": "0.0.0",
-  "main": "electron/main.js", 
+  "main": "electron/main.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,6 +17,7 @@
     "@react-three/fiber": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.13.0",
     "three": "^0.160.0"
   },
   "devDependencies": {
