--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-three/drei": "^9.0.0",
     "@react-three/fiber": "^8.0.0",
+    "@react-three/postprocessing": "^2.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.13.0",
