--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@react-three/drei": "^9.0.0",
     "@react-three/fiber": "^8.0.0",
-    "@react-three/postprocessing": "^2.16.3",
+    "@react-three/postprocessing": "^2.19.1",
+    "postprocessing": "^6.38.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.13.0",
